--- a/index.html
+++ b/index.html
@@ -9,7 +9,24 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
+  <header>
+    <img src="img/logo.svg" alt="apple logo">
+    <nav>
+      <button>=</button>
+      <input type="search">
+      <ul>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+      </ul>
+    </nav>
+    <button><img src="img/cart.svg" alt="cart"></button>
+    </header>
   <body>
-    <Textarea></Textarea>
   </body>
 </html>
