--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
       <button>=</button>
       <input type="search">
       <ul>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
+        <li><a href="#">Mac</a></li>
+        <li><a href="#">iPad</a></li>
+        <li><a href="#">iPhone</a></li>
+        <li><a href="#">Watch</a></li>
+        <li><a href="#">TV</a></li>
+        <li><a href="#">Music</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#"></a></li>
       </ul>
     </nav>
     <button><img src="img/cart.svg" alt="cart"></button>
