Separated the small icons by line.

--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <header>
-    X
-    <img src="img/logo.svg" alt="apple logo">
-    <button><img src="img/cart.svg" alt="cart"></button>
+    <div>
+      <a href="#">X</a>
+    </div>
+    <div>
+      <img src="img/logo.svg" alt="apple logo">
+    </div>
+    <div>
+      <button><img src="img/cart.svg" alt="cart"></button>
+    </div>
     <nav>
       <button>=</button>
       <input type="search">
