--- a/index.html
+++ b/index.html
@@ -32,8 +32,16 @@
         <li><a href="#">Support</a></li>
       </ul>
     </nav>
-    
-    </header>
+  </header>
+  <main>
+    <div class="center">
+      <h1>iPhone 11 Pro</h1>
+      <h2>Pro cameras. Pro display. Pro performance.</h2>
+      <h3>From $0 down with trade-in.*</h3>
+      <h2>Learn more ></h2>
+      <h2>Pre-order</h2>
+    </div>
+  </main>
   <body>
   </body>
 </html>
