--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       <h3>From $0 down with trade-in.*</h3>
       <h2>Learn more ></h2>
       <h2>Pre-order</h2>
+      <img src="img/iphone11pro.jpg" alt="apple logo">
     </div>
   </main>
   <body>
