Search box adjusted.

--- a/index.html
+++ b/index.html
@@ -11,38 +11,60 @@
   </head>
   <header>
     <div>
-      <a href="#">X</a>
-    </div>
-    <div>
       <img src="img/logo.svg" alt="apple logo">
     </div>
     <div>
       <button><img src="img/cart.svg" alt="cart"></button>
-    </div>
+    </div><br>
+    <div>
     <nav>
-      <button>=</button>
-      <input type="search">
-      <ul>
-        <li><a href="#">Mac</a></li>
-        <li><a href="#">iPad</a></li>
-        <li><a href="#">iPhone</a></li>
-        <li><a href="#">Watch</a></li>
-        <li><a href="#">TV</a></li>
-        <li><a href="#">Music</a></li>
-        <li><a href="#">Support</a></li>
-      </ul>
+      <div>
+        <button>=</button><br>
+      </div><br>
+      <div>
+        <input class="overlay" type="search" placeholder="Search apple.com/ca">
+      </div><br>
+      <div>
+        <ul>
+          <li><a href="#">Mac</a></li>
+          <li><a href="#">iPad</a></li>
+          <li><a href="#">iPhone</a></li>
+          <li><a href="#">Watch</a></li>
+          <li><a href="#">TV</a></li>
+          <li><a href="#">Music</a></li>
+          <li><a href="#">Support</a></li>
+        </ul>
+      </div>
     </nav>
   </header>
-  <main>
-    <div class="center">
-      <h1>iPhone 11 Pro</h1>
-      <h2>Pro cameras. Pro display. Pro performance.</h2>
-      <h3>From $0 down with trade-in.*</h3>
-      <h2>Learn more ></h2>
-      <h2>Pre-order</h2>
-      <img src="img/iphone11pro.jpg" alt="apple logo">
-    </div>
-  </main>
   <body>
+    <main>
+      <div class="center">
+        <h1><strong>iPhone 11 Pro</strong></h1>
+        <h2>Pro cameras. Pro display. Pro performance.</h2>
+        <h3>From $0 down with trade-in.*</h3>
+        <h2 class="inlineblock">Learn more</h2>
+        <h2 class="inlineblock">Pre-order</h2>
+        <img src="img/iphone11pro.jpg" alt="apple logo">
+      </div><br>
+      <div class="centertwo">
+          <h1><strong>iPhone 11</strong></h1>
+          <h2>Just the right amount of everything.</h2>
+          <h3>From $0 down with trade-in.*</h3>
+          <h2 class="inlineblock">Learn more</h2>
+          <h2 class="inlineblock">Pre-order</h2>
+          <img src="img/iphone11.jpg" alt="apple logo">
+        </div><br>
+        <div class="centertwo">
+            <h1><strong>WATCH</strong></h1>
+            <h4>SERIES 5</h4>
+            <h2>With the new Always-On Retina display</h2>
+            <h2>You've never seen a watch like this.</h2>
+            <h3>From $0 down with trade-in.*</h3>
+            <h2 class="inlineblock">Learn more</h2>
+            <h2 class="inlineblock">Pre-order</h2>
+            <img src="img/applewatch.jpg" alt="apple logo">
+          </div><br>
+    </main>
   </body>
 </html>
