--- a/index.html
+++ b/index.html
@@ -24,15 +24,17 @@
       <div>
         <input class="overlay" type="search" placeholder="Search apple.com/ca">
       </div><br>
+      <div class="bottomborderone">
+      </div>
       <div>
         <ul>
-          <li><a href="#">Mac</a></li>
-          <li><a href="#">iPad</a></li>
-          <li><a href="#">iPhone</a></li>
-          <li><a href="#">Watch</a></li>
-          <li><a href="#">TV</a></li>
-          <li><a href="#">Music</a></li>
-          <li><a href="#">Support</a></li>
+          <li><a href="#" class="bottomborder">Mac</a></li>
+          <li><a href="#" class="bottomborder">iPad</a></li>
+          <li><a href="#" class="bottomborder">iPhone</a></li>
+          <li><a href="#" class="bottomborder">Watch</a></li>
+          <li><a href="#" class="bottomborder">TV</a></li>
+          <li><a href="#" class="bottomborder">Music</a></li>
+          <li><a href="#" class="bottombordertwo">Support</a></li><br>
         </ul>
       </div>
     </nav>
