First layer of text edited.

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
           <li><a href="#" class="bottombordertwo">Support</a></li><br>
         </ul>
       </div>
+      <div class="bottomborderone">
+        </div>
     </nav>
   </header>
   <body>
