--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </ul>
       </div>
       <div class="bottomborderone">
-        </div>
+      </div>
     </nav>
   </header>
   <body>
@@ -47,19 +47,19 @@
         <h1><strong>iPhone 11 Pro</strong></h1>
         <h2>Pro cameras. Pro display. Pro performance.</h2>
         <h3>From $0 down with trade-in.*</h3>
-        <h2 class="inlineblock">Learn more</h2>
-        <h2 class="inlineblock">Pre-order</h2>
+        <h2 class="inlineblock"><a href="#">Learn more ></a></h2>
+        <h2 class="inlineblock"><a href="#">Pre-order ></a>Pre-order</h2>
         <img src="img/iphone11pro.jpg" alt="apple logo">
       </div><br>
       <div class="centertwo">
           <h1><strong>iPhone 11</strong></h1>
           <h2>Just the right amount of everything.</h2>
           <h3>From $0 down with trade-in.*</h3>
-          <h2 class="inlineblock">Learn more</h2>
-          <h2 class="inlineblock">Pre-order</h2>
+          <h2 class="inlineblock"><a href="#">Learn more ></a></h2>
+          <h2 class="inlineblock"><a href="#">Pre-order ></a></h2>
           <img src="img/iphone11.jpg" alt="apple logo">
-        </div><br>
-        <div class="centertwo">
+      </div><br>
+      <div class="centertwo">
             <h1><strong>WATCH</strong></h1>
             <h4>SERIES 5</h4>
             <h2>With the new Always-On Retina display</h2>
@@ -68,7 +68,7 @@
             <h2 class="inlineblock">Learn more</h2>
             <h2 class="inlineblock">Pre-order</h2>
             <img src="img/applewatch.jpg" alt="apple logo">
-          </div><br>
+      </div><br>
     </main>
   </body>
 </html>
