Images made background; html indentions adjusted.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <div>
       <button><img src="img/cart.svg" alt="cart"></button>
     </div><br>
-    <div>
     <nav>
       <div>
         <button>=</button><br>
@@ -37,36 +36,32 @@
           <li><a href="#" class="bottombordertwo">Support</a></li><br>
         </ul>
       </div>
-      <div class="bottomborderone">
-      </div>
+    <div class="bottomborderone">
+    </div>
     </nav>
   </header>
   <body>
     <main>
-      <div class="center">
-        <h1><strong>iPhone 11 Pro</strong></h1>
-        <h2>Pro cameras. Pro display. Pro performance.</h2>
+    <div class="center">
+      <h1><strong>iPhone 11 Pro</strong></h1>
+      <h2>Pro cameras. Pro display. Pro performance.</h2>
+      <h3>From $0 down with trade-in.*</h3>
+      <h2 class="inlineblock"><a href="#" class="h2color">Learn more ></a></h2>
+      <h2 class="inlineblock"><a href="#" class="h2color">Pre-order ></a></h2>
+    </div><br>
+    <div class="centertwo">
+        <h1><strong>iPhone 11</strong></h1>
+        <h2>Just the right amount of everything.</h2>
         <h3>From $0 down with trade-in.*</h3>
         <h2 class="inlineblock"><a href="#" class="h2color">Learn more ></a></h2>
         <h2 class="inlineblock"><a href="#" class="h2color">Pre-order ></a></h2>
-        <img src="img/iphone11pro.jpg" alt="apple logo">
-      </div><br>
-      <div class="centertwo">
-          <h1><strong>iPhone 11</strong></h1>
-          <h2>Just the right amount of everything.</h2>
-          <h3>From $0 down with trade-in.*</h3>
-          <h2 class="inlineblock"><a href="#" class="h2color">Learn more ></a></h2>
-          <h2 class="inlineblock"><a href="#" class="h2color">Pre-order ></a></h2>
-          <img src="img/iphone11.jpg" alt="apple logo">
-      </div><br>
-      <div class="centertwo">
-          <img src="img/watch-logo.png" alt="apple logo">
-            <h2>With the new Always-On Retina display</h2>
-            <h2>You've never seen a watch like this.</h2>
-            <h2 class="inlineblock"><a href="#" class="h2color">Learn more ></a></h2>
-            <h2 class="inlineblock"><a href="#" class="h2color">Pre-order ></a></h2>
-            <img src="img/applewatch.jpg" alt="apple logo">
-      </div><br>
+    </div><br>
+    <div class="centerthree">
+        <h2>With the new Always-On Retina display</h2>
+        <h2>You've never seen a watch like this.</h2>
+        <h2 class="inlineblock"><a href="#" class="h2color">Learn more ></a></h2>
+        <h2 class="inlineblock"><a href="#" class="h2color">Pre-order ></a></h2>
+    </div><br>
     </main>
   </body>
 </html>
