--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <meta name="description" content="Describe the project here.">
-    <meta name="author" content="Your Name Here">
+    <meta name="new apple" content="apple site replication.">
+    <meta name="JR Sia" content="apple replication">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
@@ -57,6 +57,7 @@
         <h2 class="inlineblock"><a href="#" class="h2color">Pre-order ></a></h2>
     </div><br>
     <div class="centerthree">
+        <img src="img/watch-logo.png">
         <h2>With the new Always-On Retina display</h2>
         <h2>You've never seen a watch like this.</h2>
         <h2 class="inlineblock"><a href="#" class="h2color">Learn more ></a></h2>
