Tried fixing the logos up top.

--- a/index.html
+++ b/index.html
@@ -11,17 +11,15 @@
   </head>
   <header>
     <div>
-      <img src="img/logo.svg" alt="apple logo">
-    </div>
-    <div>
-      <button><img src="img/cart.svg" alt="cart"></button>
+      <img src="img/logo.svg" alt="apple logo" class="applelogo">
+      <button><img src="img/cart.svg" alt="cart" class="cartbutton"></button>
     </div><br>
     <nav>
       <div>
         <button>=</button><br>
       </div><br>
       <div>
-        <input class="overlay" type="search" placeholder="Search apple.com/ca">
+        <input class="overlay searchbuttontext" type="search" placeholder="Search apple.com/ca">
       </div><br>
       <div class="bottomborderone">
       </div>
