--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </div><br>
       <div class="bottomborderone">
       </div>
-      <div>
+      <div class="hidemenu">
         <ul>
           <li><a href="#" class="bottomborder">Mac</a></li>
           <li><a href="#" class="bottomborder">iPad</a></li>
