--- a/index.html
+++ b/index.html
@@ -9,58 +9,60 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
-  <header>
-    <div>
-      <img src="img/logo.svg" alt="apple logo" class="applelogo">
-      <button><img src="img/cart.svg" alt="cart" class="cartbutton"></button>
-    </div><br>
-    <nav>
+  <div class="container">
+    <header>
       <div>
-        <button>=</button><br>
+        <img src="img/logo.svg" alt="apple logo" class="applelogo">
+        <button><img src="img/cart.svg" alt="cart" class="cartbutton"></button>
       </div><br>
-      <div>
-        <input class="overlay searchbuttontext" type="search" placeholder="Search apple.com/ca">
-      </div><br>
+      <nav>
+        <div>
+          <button>=</button><br>
+        </div><br>
+        <div>
+          <input class="overlay searchbuttontext" type="search" placeholder="Search apple.com/ca">
+        </div><br>
+        <div class="bottomborderone">
+        </div>
+        <div class="hidemenu">
+          <ul>
+            <li><a href="#" class="bottomborder">Mac</a></li>
+            <li><a href="#" class="bottomborder">iPad</a></li>
+            <li><a href="#" class="bottomborder">iPhone</a></li>
+            <li><a href="#" class="bottomborder">Watch</a></li>
+            <li><a href="#" class="bottomborder">TV</a></li>
+            <li><a href="#" class="bottomborder">Music</a></li>
+            <li><a href="#" class="bottombordertwo">Support</a></li><br>
+          </ul>
+        </div>
       <div class="bottomborderone">
       </div>
-      <div class="hidemenu">
-        <ul>
-          <li><a href="#" class="bottomborder">Mac</a></li>
-          <li><a href="#" class="bottomborder">iPad</a></li>
-          <li><a href="#" class="bottomborder">iPhone</a></li>
-          <li><a href="#" class="bottomborder">Watch</a></li>
-          <li><a href="#" class="bottomborder">TV</a></li>
-          <li><a href="#" class="bottomborder">Music</a></li>
-          <li><a href="#" class="bottombordertwo">Support</a></li><br>
-        </ul>
-      </div>
-    <div class="bottomborderone">
-    </div>
-    </nav>
-  </header>
-  <body>
-    <main>
-    <div class="center">
-      <h1><strong>iPhone 11 Pro</strong></h1>
-      <h2>Pro cameras. Pro display. Pro performance.</h2>
-      <h3>From $0 down with trade-in.*</h3>
-      <h2 class="inlineblock"><a href="#" class="h2color">Learn more ></a></h2>
-      <h2 class="inlineblock"><a href="#" class="h2color">Pre-order ></a></h2>
-    </div><br>
-    <div class="centertwo">
-        <h1><strong>iPhone 11</strong></h1>
-        <h2>Just the right amount of everything.</h2>
+      </nav>
+    </header>
+    <body>
+      <main>
+      <div class="center">
+        <h1><strong>iPhone 11 Pro</strong></h1>
+        <h2>Pro cameras. Pro display. Pro performance.</h2>
         <h3>From $0 down with trade-in.*</h3>
         <h2 class="inlineblock"><a href="#" class="h2color">Learn more ></a></h2>
         <h2 class="inlineblock"><a href="#" class="h2color">Pre-order ></a></h2>
-    </div><br>
-    <div class="centerthree">
-        <img src="img/watch-logo.png">
-        <h2>With the new Always-On Retina display</h2>
-        <h2>You've never seen a watch like this.</h2>
-        <h2 class="inlineblock"><a href="#" class="h2color">Learn more ></a></h2>
-        <h2 class="inlineblock"><a href="#" class="h2color">Pre-order ></a></h2>
-    </div><br>
-    </main>
-  </body>
+      </div><br>
+      <div class="centertwo">
+          <h1><strong>iPhone 11</strong></h1>
+          <h2>Just the right amount of everything.</h2>
+          <h3>From $0 down with trade-in.*</h3>
+          <h2 class="inlineblock"><a href="#" class="h2color">Learn more ></a></h2>
+          <h2 class="inlineblock"><a href="#" class="h2color">Pre-order ></a></h2>
+      </div><br>
+      <div class="centerthree">
+          <img src="img/watch-logo.png">
+          <h2>With the new Always-On Retina display</h2>
+          <h2>You've never seen a watch like this.</h2>
+          <h2 class="inlineblock"><a href="#" class="h2color">Learn more ></a></h2>
+          <h2 class="inlineblock"><a href="#" class="h2color">Pre-order ></a></h2>
+      </div><br>
+      </main>
+    </body>
+  </div>
 </html>
