Tried fixing search.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <button>=</button><br>
         </div><br>
         <div>
-          <input class="overlay searchbuttontext" type="search" placeholder="Search apple.com/ca">
+          <input class="overlay" type="search" placeholder="Search apple.com/ca">
         </div><br>
         <div class="bottomborderone">
         </div>
@@ -57,7 +57,7 @@
       </div><br>
       <div class="centerthree">
           <img src="img/watch-logo.png">
-          <h2>With the new Always-On Retina display</h2>
+          <h2 class="watchtext">With the new Always-On Retina display</h2>
           <h2>You've never seen a watch like this.</h2>
           <h2 class="inlineblock"><a href="#" class="h2color">Learn more ></a></h2>
           <h2 class="inlineblock"><a href="#" class="h2color">Pre-order ></a></h2>
