--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
-  <div class="container">
+  <div class="container">ß
     <header>
       <div>
         <img src="img/logo.svg" alt="apple logo" class="applelogo">
